# refl-cpp

./: .gitignore  CMakeLists.txt  README.md  test.cpp
.run/: refl-cpp-test.run.xml  refl-cpp_generator.run.xml  refl-cpp_tests.run.xml
benchmarks/: CMakeLists.txt  result.cpp
example/: CMakeLists.txt  main.cpp  test.bat  test.hpp
example/refl-cpp.generated/kpop/: test.generated.cpp  test.generated.hpp  test.generated.reflection
generator/: CMakeLists.txt  main.cpp
generator/src/: generate_reflect_data.cpp  generate_reflect_data.hpp  main.cpp  reflect_data.hpp
include/refl-cpp/: argument.hpp  database.hpp  declare_reflect.hpp  field.hpp  field_data.hpp  field_traits.hpp  field_wrapper.hpp  function.hpp  function_traits.hpp  function_wrapper.hpp  method.hpp  method_data.hpp  method_func.hpp  method_func_data.hpp  method_wrapper.hpp  refl-cpp.hpp  reflect.hpp  reflect_data.hpp  reflect_data_instance.hpp  reflect_printer.hpp  type.hpp  type_data.hpp  type_flags.hpp  type_id.hpp  type_instance.hpp  variant.hpp  variant_traits.hpp  variant_wrapper.hpp
include/refl-cpp/common/: flags.hpp  formatted_error.hpp  list_seperator.hpp  new_result.hpp  reference_wrapper.hpp  result.hpp  result_tags.hpp  stack_tracing_error.hpp  type_traits.hpp  unreachable.hpp
include/refl-cpp/impl/: impl.hpp  method.hpp  method_data.hpp  method_func_data.hpp  variant.hpp  variant_matcher.hpp  variant_wrapper.hpp
include/refl-cpp/impl/variant_matcher/: const_lvalue_ref_variant_matcher.hpp  const_pointer_variant_matcher.hpp  const_rvalue_ref_variant_matcher.hpp  const_value_variant_matcher.hpp  lvalue_ref_variant_matcher.hpp  pointer_variant_matcher.hpp  rvalue_ref_variant_matcher.hpp  value_variant_matcher.hpp
include/refl-cpp/meta/: builtin.hpp  common.hpp  meta.hpp  std.hpp
patches/: ccache.cmake.patch
src/: main.cpp
src/refl-cpp/: argument.cpp  method.cpp  type.cpp  type_id.cpp  variant.cpp
test-project/: CMakeLists.txt  main.cpp  refl-cpp.generated.hpp  test.bat  test.hpp
test-project/refl-cpp.generated/kpop/: test.generated.cpp  test.generated.hpp
tests/: CMakeLists.txt  config.hpp  fields.cpp  function_wrapper.cpp  method.cpp  no_copy_or_move_struct.hpp  reflect.cpp  variant.cpp
tests/common/: result.cpp
tests/helper/: result_helper.hpp  variant_helper.hpp
